# CPP_Animation_Course

./: CMakeLists.txt  README.md
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
src/: Logger.h  Main.cpp  Window.cpp  Window.h
src/OpenGL/: CMakeLists.txt  Logger.cpp  Logger.h  Main.cpp  OGLRenderer.h  Window.cpp  Window.h
src/OpenGL/Model/: Model.cpp  Model.h
src/OpenGL/Renderer/: Framebuffer.cpp  Framebuffer.h  OGLRenderData.h  OGLRenderer.cpp  OGLRenderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h
src/OpenGL/Renderer/Shaders/: basic.frag  basic.vert
src/Vulkan/: CMakeLists.txt  Logger.cpp  Window.cpp  Window.h
